--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>globalworming.today</title>
     <meta name="description" content="globalworming.today" />
     <meta name="author" content="globalworming.today" />
+    <link rel="icon" href="/favicon.ico" />    
   </head>
 
   <body>
